feat:done script
